--- a/PAGINA_OBLIGATORIO/Views/Home/Login.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Home/Login.cshtml
@@ -1,8 +1,14 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
 }
-<form action="/Home/Login" method="post">
+<h1>Login</h1>
 
+<form method="post">
+    <label for="email">Ingresé su email:</label>
+    <input type="email" name="email" id="email" required/>
+    <label for="password">Ingresé su contraseña:</label>
+    <input type="password" name="password" id="password" required/>
+    <input type="submit" value="login" />
 </form>
+<p class="alert-danger">@ViewBag.Mensaje</p>
+<p><a href="/Home/Registro">No esta registrado? Registrese!</a></p>
