Configurado variables de session de nombre,rol y correo para los usuarios. Visualisables los posts correspondientes dependiendo del rol, si no ha iniciado sesión visualizara solo los publicos, si es admin verá todos y si es miembro verá los publicos y los privados con los que tenga amistad. Ahora en la vista Post en Index se verá ahora el post y sus comentarios, autor,titulo y contenido.

--- a/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
@@ -1,5 +1,14 @@
 ﻿@using Sistema;
+
 @foreach(Post p in ViewBag.Posts)
 {
-    <p>@p.ToString()</p>
+    <article>
+        <p>@p.ToString()</p>
+        @foreach(Comentario com in p.Comentarios)
+        {
+            <p>@com.Autor</p>
+            <p>@com.Titulo</p>
+            <p>@com.Contenido</p>
+        }
+    </article>
 }
