Eliminada una vista de posts, se usa index para todo por ahora,modificado el layout para que aparezca los miembros para el administrador, arreglado pequeño error en el login que no permitia logearse debido a mayusculas en el email, ahora lo pasa todo a lowecase,Creado controlador de Miembros para el administrador donde puede ver a todos los miembros y los puede bloquear,desbloquear y ordenarlos de forma ascendente de por el apellido y el nombre a->z y por ultimo agregados metodos de accion para banear y desbanear posts,solo lo puede hacer un administrador en el controlador de posts

--- a/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
@@ -1,14 +1,33 @@
 ﻿@using Sistema;
+@{
+    string rol = Context.Session.GetString("rol");
+}
+@if(@TempData["Mensaje"] == null){
+    <p>@TempData["Mensaje"]</p>
+}
 
 @foreach(Post p in ViewBag.Posts)
 {
+    @if (!p.IsCensurado || rol == "admin")
+    {
     <article>
         <p>@p.ToString()</p>
-        @foreach(Comentario com in p.Comentarios)
+        @if (rol == "admin")
+        {
+                if (!p.IsCensurado)
+                {
+                    <p><a href="/Posts/Banear?idpost=@p.Id">Banear</a></p>
+                }else{
+                    <p><a href="/Posts/Desbanear?idpost=@p.Id">Desbanear</a></p>
+                }
+                
+        }
+        @foreach (Comentario com in p.Comentarios)
         {
             <p>@com.Autor</p>
             <p>@com.Titulo</p>
             <p>@com.Contenido</p>
         }
     </article>
+    } 
 }
