Creado metodos de accion y vista para ver un perfil de un miembro, ya sea el mismo o el de otros, agregado en el layout opcion de ver el perfil una vez logueado,solo para los miembros y en la vista de post en index se agrego la forma de agregar comentarios.

--- a/PAGINA_OBLIGATORIO/Views/Miembros/Index.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Miembros/Index.cshtml
@@ -12,4 +12,5 @@
     {
         <p><a href="/Miembros/Bloquear?email=@m.Email">Bloquear</a></p>
     }
+    <p><a href="/Miembros/PerfilMiembro?correo=@m.Email">Ver Perfil</a></p>
 }
