--- a/PAGINA_OBLIGATORIO/Views/Shared/_Layout.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Shared/_Layout.cshtml
@@ -35,6 +35,12 @@
                                 <a class="nav-link text-dark" href="/Miembros/">Ver Miembros</a>
                             </li>
                         }
+                        else if (rol == "miembro")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="/Miembros/Perfil">Ver Perfil</a>
+                            </li>
+                        }
                     </ul>
                     <ul class="navbar-nav">
                         @if (nombreUsuario == null)
