Cambiado nombre de MiembrosController a UsuariosController y creados metodos de accion de ver perfil y amigos y agregado màs tiempo a la duracion de la sesión.

--- a/PAGINA_OBLIGATORIO/Views/Shared/_Layout.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Shared/_Layout.cshtml
@@ -32,13 +32,16 @@
                         </li>
                         @if(rol == "admin"){
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="/Miembros/">Ver Miembros</a>
+                                <a class="nav-link text-dark" href="/Usuarios/VisualizarMiembros">Ver Miembros</a>
                             </li>
                         }
                         else if (rol == "miembro")
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="/Miembros/Perfil">Ver Perfil</a>
+                                <a class="nav-link text-dark" href="/Usuarios/Perfil">Ver Perfil</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="/Usuarios/Amigos">Ver Amigos</a>
                             </li>
                         }
                     </ul>
