Modificado metodo Perfil para todos, ahora el logueado y los perfiles de los demás miembros se podra ver bien, exceptuando a los admins que no tienen perfil.En la vista home/index ahora hay un buscador de miembros por nombre y apellido, en posts/index se vera ahora el nombre completo de los miembros que hicieron las publicaciones, en el layout se modifico dos enlaces para miembro y en usuario/perfil se verá los post que sean correspondientes(si son amigos o no) .

--- a/PAGINA_OBLIGATORIO/Views/Home/Index.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienvenido</h1>
+    <h2>Buscas a alguien?</h2>
+    <form action="/Usuarios/BuscarMiembrosPorNombre" method="get">
+        <input type="text" name="nombre" placeholder="Ingrese el nombre"/>
+        <input type="text" name="apellido" placeholder="Ingrese el apellido" />
+        <input type="submit" value="Buscar"/>
+    </form>
 </div>
