--- a/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
@@ -3,57 +3,61 @@
     string rol = Context.Session.GetString("rol");
     ViewData["Title"] = "Posts";
 }
-@if(@TempData["Mensaje"] != null){
-    <p>@TempData["Mensaje"]</p>
+@if(@TempData["Error"] != null){
+    <p>@TempData["Error"]</p>
 }
 
 <form action="/Posts/FiltarPostPor" method="get">
     <label for="texto">Que frase esta buscando?</label>
-    <input type="text" name="texto" id="texto"/>
+    <input type="text" name="texto" id="texto" required />
     <label for="texto">Ingrese el número de aceptación</label>
-    <input type="number" name="aceptacion" id="texto" />
+    <input type="number" name="aceptacion" id="texto" required />
     <input type="submit" value="Buscar" />
 </form>
 
-@foreach(Post p in ViewBag.Posts)
+@foreach (Post p in ViewBag.Posts)
 {
     @if (!p.IsCensurado || rol == "admin")
     {
         <article class="border border-primary my-5">
-        <p><a href="/Usuarios/PerfilMiembro?correo=@p.Autor.Email">@p.Autor.NombreCompleto()</a></p>
-        <p>@p.Imagen</p>
-        <p>@p.Contenido</p>
-        <p><a href="/Posts/ReaccionarPost?idpost=@p.Id&reaccion=1">Like</a>@p.CantidadDeLikes()</p>
-        <p><a href="/Posts/ReaccionarPost?idpost=@p.Id&reaccion=0">Dislike</a>@p.CantidadDeDislikes()</p>
-        @if (rol == "admin")
-        {
+            <p><a href="/Usuarios/PerfilMiembro?correo=@p.Autor.Email">@p.Autor.NombreCompleto()</a></p>
+            <p>@p.Imagen</p>
+            <p>@p.Contenido</p>
+            <p><a href="/Posts/ReaccionarPost?idpost=@p.Id&reaccion=1">Like</a>@p.CantidadDeLikes()</p>
+            <p><a href="/Posts/ReaccionarPost?idpost=@p.Id&reaccion=0">Dislike</a>@p.CantidadDeDislikes()</p>
+            @if (rol == "admin")
+            {
                 if (!p.IsCensurado)
                 {
                     <p><a href="/Posts/BanearPost?idpost=@p.Id">Banear</a></p>
-                }else{
+                }
+                else
+                {
                     <p><a href="/Posts/DesbanearPost?idpost=@p.Id">Desbanear</a></p>
                 }
 
-        }  
-        <form action="/Posts/RealizarComentario" method="post">
-        <input type="text" name="idpost" value="@p.Id" hidden>
-        <div class="form-group">
-            <label for="titulo">Ingrese el titulo</label>
-            <input type="text" name="titulo">
-            <label for="Comentario">Comenté</label>
-            <textarea class="form-control"></textarea>
-        </div>
-        <input type="submit" value="Comentar">
-        </form>
-        <p>Comentarios</p>
-        @foreach (Comentario com in p.Comentarios)
-        {
-            <p>@com.Autor</p>
-            <p>@com.Titulo</p>
-            <p>@com.Contenido</p>
-            <p><a href="/Posts/ReaccionarComentario?idpost=@p.Id&idcomentario=@com.Id&reaccion=1">Like</a>@com.CantidadDeLikes()</p>
-            <p><a href="/Posts/ReaccionarComentario?idpost=@p.Id&idcomentario=@com.Id&reaccion=0">Dislike</a>@com.CantidadDeDislikes()</p>
-        }
-    </article>
-    } 
+            }
+            <form action="/Posts/RealizarComentario" method="post">
+                <input type="text" name="idpost" value="@p.Id" hidden>
+                <div class="form-group">
+                    <label for="titulo">Ingrese el titulo</label>
+                    <input type="text" name="titulo">
+                    <label for="Comentario">Comenté</label>
+                    <textarea class="form-control"></textarea>
+                </div>
+                <input type="submit" value="Comentar">
+            </form>
+            <p>Comentarios</p>
+            @foreach (Comentario com in p.Comentarios)
+            {
+                <div class="border border-primary my-2">
+                    <p><a href="/Usuarios/Perfil?correo=@com.Autor.Email">@com.Autor.NombreCompleto()</a></p>
+                    <p>@com.Titulo</p>
+                    <p>@com.Contenido</p>
+                    <p><a href="/Posts/ReaccionarComentario?idpost=@p.Id&idcomentario=@com.Id&reaccion=1">Like</a>@com.CantidadDeLikes()</p>
+                    <p><a href="/Posts/ReaccionarComentario?idpost=@p.Id&idcomentario=@com.Id&reaccion=0">Dislike</a>@com.CantidadDeDislikes()</p>
+                </div>
+            }
+        </article>
+    }
 }
