--- a/PAGINA_OBLIGATORIO/Views/Usuarios/Perfil.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Usuarios/Perfil.cshtml
@@ -3,19 +3,53 @@
 @{
     string rol = Context.Session.GetString("rol");
 }
-
 <p>@Model.NombreCompleto()</p>
-@foreach(Post p in ViewBag.Posts)
+
+<p><a href="/Usuarios/Amigos?correo=@Model.Email">Ver Amigos</a></p>
+
+@foreach (Post p in ViewBag.Posts)
 {
-    if (!p.IsCensurado || rol == "admin")
+    @if (!p.IsCensurado || rol == "admin")
     {
-        <article class="border">
-        <p>@p.ToString()</p>
-        @foreach (Comentario c in p.Comentarios)
-        {
-            <p>@c.Autor</p>
-            <p>@c.Contenido</p>
-        }
+        <article class="border border-primary my-5">
+            <p><a href="/Usuarios/Perfil?correo=@p.Autor.Email">@p.Autor.NombreCompleto()</a></p>
+            <p>@p.Imagen</p>
+            <p>@p.Contenido</p>
+            <p><a href="/Posts/ReaccionarPost?idpost=@p.Id&reaccion=1">Like</a>@p.CantidadDeLikes()</p>
+            <p><a href="/Posts/ReaccionarPost?idpost=@p.Id&reaccion=0">Dislike</a>@p.CantidadDeDislikes()</p>
+            @if (rol == "admin")
+            {
+                if (!p.IsCensurado)
+                {
+                    <p><a href="/Posts/BanearPost?idpost=@p.Id">Banear</a></p>
+                }
+                else
+                {
+                    <p><a href="/Posts/DesbanearPost?idpost=@p.Id">Desbanear</a></p>
+                }
+
+            }
+            <form action="/Posts/RealizarComentario" method="post">
+                <input type="text" name="idpost" value="@p.Id" hidden>
+                <div class="form-group">
+                    <label for="titulo">Ingrese el titulo</label>
+                    <input type="text" name="titulo" required>
+                    <label for="Comentario">Comenté</label>
+                    <textarea class="form-control" name="contenido" required></textarea>
+                </div>
+                <input type="submit" value="Comentar">
+            </form>
+            <p>Comentarios</p>
+            @foreach (Comentario com in p.Comentarios)
+            {
+                <div class="border border-primary my-2">
+                    <p><a href="/Usuarios/Perfil?correo=@com.Autor.Email">@com.Autor.NombreCompleto()</a></p>
+                    <p>@com.Titulo</p>
+                    <p>@com.Contenido</p>
+                    <p><a href="/Posts/ReaccionarComentario?idpost=@p.Id&idcomentario=@com.Id&reaccion=1">Like</a>@com.CantidadDeLikes()</p>
+                    <p><a href="/Posts/ReaccionarComentario?idpost=@p.Id&idcomentario=@com.Id&reaccion=0">Dislike</a>@com.CantidadDeDislikes()</p>
+                </div>
+            }
         </article>
     }
 }
