--- a/PAGINA_OBLIGATORIO/Views/Usuarios/VerMiembros.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Usuarios/VerMiembros.cshtml
@@ -4,13 +4,16 @@
 @foreach (Miembro m in ViewBag.Usuarios)
 {
     <p>@m.ToString()</p>
-    if (m.Bloqueado)
+    if(Context.Session.GetString("rol") == "admin")
     {
-        <p><a href="/Usuarios/Desbloquear?email=@m.Email">Desbloquear</a></p>
-    }
-    else
-    {
-        <p><a href="/Usuarios/Bloquear?email=@m.Email">Bloquear</a></p>
+        if (m.Bloqueado)
+        {
+            <p><a href="/Usuarios/Desbloquear?email=@m.Email">Desbloquear</a></p>
+        }
+        else
+        {
+            <p><a href="/Usuarios/Bloquear?email=@m.Email">Bloquear</a></p>
+        }
     }
     <p><a href="/Usuarios/PerfilMiembro?correo=@m.Email">Ver Perfil</a></p>
 }
