Ahora se puede reaccionar a los posts, se puede quitar y cambiar la reaccion,en SolicitudesController agregados los metodos de accion de RechazarSoli(),AceptarSoli() y EliminarAmistad() y arreglado errores de no poder enviar solicitud y por ultimo UsuariosController, ahora en BuscarMiembrosPorNombre() si no ingresas ningun nombre o apellido te dara una lista de todos los miembros(incluyendo al miembro), en Perfil(), dependiendo si es el perfil del logueado o de otro miembro te saldra las opciones de enviar, rechazar, aceptar y eliminar solicitud.

--- a/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
@@ -9,7 +9,7 @@
 
 <form action="/Posts/FiltarPostPor" method="get">
     <label for="texto">Que frase esta buscando?</label>
-    <input type="text" name="texto" id="texto" required />
+    <input type="text" name="texto" id="texto" required/>
     <label for="texto">Ingrese el número de aceptación</label>
     <input type="number" name="aceptacion" id="texto" required />
     <input type="submit" value="Buscar" />
@@ -41,9 +41,9 @@
                 <input type="text" name="idpost" value="@p.Id" hidden>
                 <div class="form-group">
                     <label for="titulo">Ingrese el titulo</label>
-                    <input type="text" name="titulo">
+                    <input type="text" name="titulo" required>
                     <label for="Comentario">Comenté</label>
-                    <textarea class="form-control"></textarea>
+                    <textarea class="form-control" name="contenido" required></textarea>
                 </div>
                 <input type="submit" value="Comentar">
             </form>
