--- a/PAGINA_OBLIGATORIO/Views/Shared/_Layout.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Shared/_Layout.cshtml
@@ -42,6 +42,12 @@
                                 <a class="nav-link text-dark" href="/Usuarios/Perfil?correo=@correo">Ver Perfil</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" href="/Solicitudes/">Ver Invitaciones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="/Solicitudes/MisSolicitudesEnviadas">Ver Solicitudes Enviadas</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" href="/Usuarios/Amigos?correo=@correo">Ver Amigos</a>
                             </li>
                         }
