--- a/PAGINA_OBLIGATORIO/Views/Usuarios/Amigos.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Usuarios/Amigos.cshtml
@@ -3,7 +3,7 @@
 @foreach (Miembro m in ViewBag.Amigos)
 {
     <p>@m.ToString()</p>
-    <form action="/Usuarios/PerfilMiembro?correo=@m.Email" method="post">
+    <form action="/Usuarios/Perfil?correo=@m.Email" method="post">
         <input type="submit" value="Ver Perfil" >
     </form>
 }
