--- a/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
@@ -21,6 +21,7 @@
     {
         <article class="border border-primary my-5">
             <p><a href="/Usuarios/PerfilMiembro?correo=@p.Autor.Email">@p.Autor.NombreCompleto()</a></p>
+            <p>@p.Titulo</p>
             <p>@p.Imagen</p>
             <p>@p.Contenido</p>
             <p><a href="/Posts/ReaccionarPost?idpost=@p.Id&reaccion=1">Like</a>@p.CantidadDeLikes()</p>
