--- a/PAGINA_OBLIGATORIO/Views/Shared/_Layout.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Shared/_Layout.cshtml
@@ -48,6 +48,9 @@
                                 <a class="nav-link text-dark" href="/Solicitudes/MisSolicitudesEnviadas">Ver Solicitudes Enviadas</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" href="/Posts/PublicarPost">Publicar Post</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" href="/Usuarios/Amigos?correo=@correo">Ver Amigos</a>
                             </li>
                         }
