Mostrar mensaje de error en caso de registrarse mal o publicar mal un posts.

--- a/PAGINA_OBLIGATORIO/Views/Home/Registro.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Home/Registro.cshtml
@@ -13,4 +13,7 @@
     <input type="date" name="fechanacimiento" id="fechanacimiento" required/>
     <input type="submit" value="Registrarse" />
 </form>
-<p>@ViewBag.Mensaje</p>
+@if (ViewBag.Mensaje != null)
+{
+    <p>@ViewBag.Mensaje</p>
+}
