Cambiado un viewbag de Amigos ->SonAmigos y en las vista/usuarios si no tiene amigos saldra que no tiene amigos.

--- a/PAGINA_OBLIGATORIO/Views/Usuarios/Amigos.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Usuarios/Amigos.cshtml
@@ -1,5 +1,10 @@
 ﻿@using Sistema;
 
+@if (ViewBag.Amigos.Count  == 0)
+{
+    <p>Usted no tiene ningun amigo, tal vez pueda encontrar alguno <a href="/Usuarios/BuscarMiembrosPorNombre">Aqui</a></p>
+}
+
 @foreach (Miembro m in ViewBag.Amigos)
 {
     <p>@m.ToString()</p>
