En postsController en el metodo FiltarPostPor() a los parametros se les agrego un valor por defecto.en la vista index de posts se le quito el required al form de filtrado de posts y por ultimo en la vista de vermiembros de usuario se agrego un mensaje de error por si no encuentra ningun miembro por el nombre u apellido.

--- a/PAGINA_OBLIGATORIO/Views/Usuarios/VerMiembros.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Usuarios/VerMiembros.cshtml
@@ -19,3 +19,7 @@
     }
     <p><a href="/Usuarios/Perfil?correo=@m.Email">Ver Perfil</a></p>
 }
+@if (ViewBag.Usuarios.Count == 0 && Context.Session.GetString("rol") != "admin")
+{
+    <p>No hay personas que coincidan con el nombre o apellido</p>
+}
