--- a/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
+++ b/PAGINA_OBLIGATORIO/Views/Posts/Index.cshtml
@@ -9,9 +9,9 @@
 
 <form action="/Posts/FiltarPostPor" method="get">
     <label for="texto">Que frase esta buscando?</label>
-    <input type="text" name="texto" id="texto" required/>
+    <input type="text" name="texto" id="texto"/>
     <label for="texto">Ingrese el número de aceptación</label>
-    <input type="number" name="aceptacion" id="texto" required />
+    <input type="number" name="aceptacion" id="texto"/>
     <input type="submit" value="Buscar" />
 </form>
 
